--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: 
   animate_do: ^1.6.3   
-  provider:
+  provider: ^4.0.4
+  #assets_audio_player: ^1.3.0
 
 dev_dependencies:
   flutter_test:
