--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   font_awesome_flutter: 
   animate_do: ^1.6.3   
   provider: ^4.0.4
-  #assets_audio_player: ^1.3.0
+  assets_audio_player: ^1.3.0
 
 dev_dependencies:
   flutter_test:
